Deprecate `gatsby-theme-mdx`

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prepare": "husky install",
     "postinstall": "yarn-deduplicate --strategy fewer && patch-package || exit 0",
     "prepublishOnly": "yarn build",
-    "build": "lerna run build --no-private --ignore gatsby-theme-mdx",
+    "build": "lerna run build --no-private",
     "clean": "lerna exec \"rimraf dist node_modules\" && gatsby clean",
     "docs": "gatsby develop",
     "docs-build": "gatsby build",
@@ -52,7 +52,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.0.0",
     "gatsby": "^2.0.0",
-    "gatsby-theme-mdx1": "npm:gatsby-theme-mdx@^1.0.0",
+    "gatsby-theme-mdx": "^1.0.0",
     "husky": "^7.0.0",
     "jsdom-global": "^3.0.0",
     "lerna": "^4.0.0",
